# ingroe-frontend

./: .env  .eslintrc.json  .gitignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.cjs  project-description.md  tailwind.config.ts
backend/: README.md  TODO.md  Taskfile.yml  pyproject.toml
backend/app/: const.py  credentials.py  database.py  enum.py  main.py
backend/app/controller/: core.py  utils.py
backend/app/controller/doc_action/: __init__.py  capture_document.py  create_document.py  delete_document.py  query_document.py  search.py  store_document.py
backend/app/dependencies/internal/: __init__.py  create_documents.py  delete_documents.py  query_documents.py  store_assets.py  store_documents.py
backend/app/exceptions/: __init__.py  exceptions.py
backend/app/exceptions/handler/: exception_handler.py
backend/app/model/db/: __init__.py  api_key_model.py  captured_document_model.py  captured_file_model.py  document_model.py  shared_document_accessor_model.py  shared_document_model.py  user_model.py
backend/app/model/pydantic_model/: __init__.py  data_model.py
backend/app/routes/: action.py  api_key.py  document_handling.py  user.py
backend/app/scripts/: __init__.py
backend/app/scripts/db/: __init__.py  api_key_crud.py  central_crud.py  (+5 more)
backend/app/utils/: __init__.py  utils.py
backend/test/: conftest.py  test_controller.py  test_controller_store_documents.py  test_external.py  test_internal.py  test_internal_store_assets.py  test_pydantic_model.py
backend/test/db/: test_database.py
backend/test/module/: graph.py
backend/your-assistant/: main.py
backend/your-assistant/api/: __init__.py
backend/your-assistant/scripts/: __init__.py
(+461 files in other folders)
