[tool.poetry]
name = "your-assistant"
version = "0.1.0"
description = "The backend for the legal_ai_app"
authors = ["Bikash <kcbiaksh@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


