[tool.poetry]
name = "your-assistant"
version = "0.1.0"
description = "The backend for the legal_ai_app"
authors = ["Bikash <kcbiaksh@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pydantic-extra-types = "^2.9.0"
pycountry = "^24.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


